test/driver/error-in-c-header-parsing.cx
// RUN: %cx -typecheck %s 2>&1 | %FileCheck %s -allow-empty
// COM: Currently we ignore errors in imported C headers (both system and user headers).

// CHECK-NOT: c-header-with-error.h:1:9: error: unknown type name 'foo'
// CHECK-NOT: [[@LINE+1]]:8: error: couldn't import C header file 'c-header-with-error.h'
import "c-header-with-error.h";

void main() {}
